--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     }
   },
   "scripts": {
-    "dev": "vite --port 3000 --host",
+    "dev": "tsc & vite --port 3000 --host",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run build & node server.cjs"
   },
   "devDependencies": {
-    "handlebars": "^4.7.8",
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-tsconfig-paths": "^4.3.1",
+    "handlebars": "^4.7.8"
+  },
+  "dependencies": {
+    "express": "^4.18.3"
   }
 }
