--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "start": "npm run build & node server.cjs"
   },
   "devDependencies": {
+    "handlebars": "^4.7.8",
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
-    "vite-tsconfig-paths": "^4.3.1",
-    "handlebars": "^4.7.8"
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "dependencies": {
-    "express": "^4.18.3"
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "express": "^4.18.3",
+    "prettier": "^3.2.5"
   }
 }
