--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "start": "npm run build & node server.cjs"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "^8.57.0",
     "handlebars": "^4.7.8",
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
@@ -25,7 +28,6 @@
     "vite-tsconfig-paths": "^4.3.1"
   },
   "dependencies": {
-    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "express": "^4.18.3",
     "prettier": "^3.2.5"
