--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "handlebars": "^4.7.8",
+    "prettier": "^3.2.5",
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
-    "vite-tsconfig-paths": "^4.3.1",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.5"
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "dependencies": {
+    "@types/node": "^20.11.25",
     "express": "^4.18.3"
   },
   "engines": {
