--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "dependencies": {
     "@types/node": "^20.11.25",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "uuid": "^9.0.1"
   },
   "engines": {
     "node": ">=21.0.0"
