--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "npm run build & node server.cjs"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
@@ -31,6 +32,7 @@
   },
   "dependencies": {
     "@types/node": "^20.11.25",
+    "clsx": "^2.1.0",
     "express": "^4.18.3",
     "uuid": "^9.0.1"
   },
