--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^20.11.25",
     "clsx": "^2.1.0",
     "express": "^4.18.3",
+    "nanoid": "^5.0.7",
     "uuid": "^9.0.1"
   },
   "engines": {
