--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "handlebars": "^4.7.8",
     "prettier": "^3.2.5",
     "sass": "^1.71.1",
+    "stylelint": "^16.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
     "vite-tsconfig-paths": "^4.3.1"
